--- a/.github/workflows/gstorage.yml
+++ b/.github/workflows/gstorage.yml
@@ -1,4 +1,9 @@
 name: Upload to Google Storage
+on:
+  push:
+    branches:
+      - master
+  workflow_dispatch:
 jobs:
   job_id:
 
@@ -6,6 +11,8 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
+
+    runs-on: ubuntu-latest
 
     steps:
     # actions/checkout MUST come before auth
@@ -18,8 +25,14 @@ jobs:
         workload_identity_provider: 'projects/940755218400/locations/global/workloadIdentityPools/github-actions/providers/github-actions'
         service_account: 'github-actions@stacked-327723.iam.gserviceaccount.com'
 
-    - id: 'upload-file'
+    - id: 'upload-javascript'
       uses: 'google-github-actions/upload-cloud-storage@v0'
       with:
-        path: '/home/marker-click.js'
+        path: 'javascript'
+        destination: 'stacked_javascript'
+
+    - id: 'upload-mini_javascript'
+      uses: 'google-github-actions/upload-cloud-storage@v0'
+      with:
+        path: 'mini_javascript'
         destination: 'stacked_javascript'
