--- a/.github/workflows/jsminify.yml
+++ b/.github/workflows/jsminify.yml
@@ -2,6 +2,7 @@ name: Minify JS and CSS files
 on:
   pull_request_review:
     types: [submitted]
+  workflow_dispatch:
 jobs:
     approved:
       runs-on: ubuntu-latest
