--- a/.github/workflows/gstorage.yml
+++ b/.github/workflows/gstorage.yml
@@ -4,8 +4,30 @@ on:
     branches:
       - master
   workflow_dispatch:
+
 jobs:
-  job_id:
+  minify_js:
+    name: Minify Javascript 🚐
+    runs-on: ubuntu-latest
+
+    steps:
+      # Check-out repository under $GITHUB_WORKSPACE, so auto-minify job can access it
+      - uses: actions/checkout@v2
+
+      - name: Minify /home
+        uses: nizarmah/auto-minify@v2.1
+        with:
+          directory: 'javascript/home'
+          output: 'mini_javascript/home'
+
+      - name: Minify /add-firewood
+        uses: nizarmah/auto-minify@v2.1
+        with:
+          directory: 'javascript/add-firewood'
+          output: 'mini_javascript/add-firewood'
+
+  upload:
+    name: Upload to Google Storage 📤
 
     # Add "id-token" with the intended permissions.
     permissions:
