--- a/.github/workflows/gstorage_dev.yml
+++ b/.github/workflows/gstorage_dev.yml
@@ -16,19 +16,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # actions/checkout MUST come before auth
-    - uses: 'actions/checkout@v3'
+      # actions/checkout MUST come before auth
+      - name: Checkout Repo 🛒
+        uses: 'actions/checkout@v3'
 
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v0'
-      with:
-        workload_identity_provider: 'projects/940755218400/locations/global/workloadIdentityPools/github-actions/providers/github-actions'
-        service_account: 'github-actions@stacked-327723.iam.gserviceaccount.com'
+      - name: Authenticate to Google Cloud 🔓
+        uses: 'google-github-actions/auth@v0'
+        with:
+          workload_identity_provider: 'projects/940755218400/locations/global/workloadIdentityPools/github-actions/providers/github-actions'
+          service_account: 'github-actions@stacked-327723.iam.gserviceaccount.com'
 
-    - id: 'upload-javascript'
-      uses: 'google-github-actions/upload-cloud-storage@v0'
-      with:
-        path: 'javascript'
-        destination: 'stacked_javascript/dev_javascript'
-        parent: false
+      - name: Upload to Google Cloud Dev Bucket 📤
+        uses: 'google-github-actions/upload-cloud-storage@v0'
+        with:
+          path: 'javascript'
+          destination: 'stacked_javascript/dev_javascript'
+          parent: false
