Set cache-control headers

--- a/.github/workflows/gstorage_dev.yml
+++ b/.github/workflows/gstorage_dev.yml
@@ -32,3 +32,5 @@ jobs:
           path: 'javascript'
           destination: 'stacked_javascript/dev_javascript'
           parent: false
+          headers: |-
+            cache-control: no-store
