--- a/.github/workflows/gstorage.yml
+++ b/.github/workflows/gstorage.yml
@@ -46,9 +46,13 @@ jobs:
         with:
           path: 'javascript'
           destination: 'stacked_javascript'
+          headers: |-
+            cache-control: max-age=1800, stale-if-error=86400
 
       - name: Upload Minified Javascript 📤
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
           path: 'mini_javascript'
           destination: 'stacked_javascript'
+          headers: |-
+            cache-control: max-age=1800, stale-if-error=86400
